<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gooduct.keeper.LoginActivity"
    android:background="@android:color/transparent">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/applogo"
        android:id="@+id/imgLogo"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:layout_gravity="top" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">

                <AutoCompleteTextView
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="top|center_vertical" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/editPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="?android:attr/colorActivatedHighlight"
                android:textColor="@color/cardview_light_background"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <Button
                android:text="@string/title_activity_guest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btGuest"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/cardview_light_background"
                android:background="@color/cardview_dark_background" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionGroup="false"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtForgotPwd"
                    android:layout_weight="1"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/action_forgot_pwd" />

                <TextView
                    android:text="@string/action_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSignup"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/holo_blue_light" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
