<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gooduct.keeper.ForgotPwdActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/title_activity_forgotPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtForgotPwd"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="18dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:autoText="false"
            android:gravity="top"
            android:freezesText="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/slide_desc" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/autoCompleteTextView2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/action_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btSubmit"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:background="@color/bg_screen3"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>

</RelativeLayout>
